kubernetes/applications/docs/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs
  namespace: apps
spec:
  selector:
    matchLabels:
      app: docs
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: docs
    spec:
      containers:
        - name: docs
          image: gitea.local.ildoc.it/ildoc/docs:d9ae6ce27a27b1db699fc2541f8e1ce62ff8c5b6
          resources:
            limits:
              cpu: 50m
              memory: 500Mi
