kubernetes/applications/docs/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: docs
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: docs
