kubernetes/applications/docs/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docs-route
  namespace: apps
spec:
  parentRefs:
  - name: traefik-gateway
    kind: Gateway
    namespace: traefik
  hostnames:
    - "docs.local.ildoc.it"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: docs
          port: 80
